--- a/css/style.css
+++ b/css/style.css
@@ -991,6 +991,11 @@ img {
     }
 }
 
+
 .tel:hover{
-    color: blue;
+    color: rgba(255, 107, 53, 0.5);
+    text-shadow: 0px 20px 40px rgba(255, 107, 53, 0.5)
+}
+.matn{
+    border-bottom: #ff0000 solid 2px;
 }
